tests/sumo/extended/simulation_routing/personTrip/errors/access_double_invalid/errors.sumo
Error: Duplicate access on lane 'WC_0' for stop 's1'
Quitting (on error).
